--- a/sass/components/_order.scss
+++ b/sass/components/_order.scss
@@ -1,4 +1,7 @@
 .order {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     background-color: var(--dark-background-color);
     max-width: 1600px;
     max-height: 600px;
@@ -58,14 +61,16 @@
         &__container {
             display: flex;
             flex-direction: column;
+            flex-wrap: wrap;
+            justify-content: space-between;
         }
 
         &__title {
+        
             margin-left: auto;
             margin-right: auto;
             margin-top: 118px;
             padding-bottom: 30px;
-            width: 365px;
             font-size: 26px;
             color: var(--white-color);
             text-align: center;
@@ -73,13 +78,16 @@
             line-height: 42px;
             letter-spacing: 0.06em;
 
+            @media screen and(min-width: 768px) {
+                    width: 365px;
+            }
+
             @media screen and(min-width: 1200px) {
                     width: 696px;
                     font-size: 44px;
                     line-height: 60px;
                     margin-top: 200px;
                 }
-
             }
 
         &__button {
