--- a/sass/main.css
+++ b/sass/main.css
@@ -756,6 +756,9 @@ body {
 }
 
 .order {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   background-color: var(--dark-background-color);
   max-width: 1600px;
   max-height: 600px;
@@ -798,19 +801,25 @@ body {
 .order__container {
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 .order__title {
   margin-left: auto;
   margin-right: auto;
   margin-top: 118px;
   padding-bottom: 30px;
-  width: 365px;
   font-size: 26px;
   color: var(--white-color);
   text-align: center;
   font-weight: 900;
   line-height: 42px;
   letter-spacing: 0.06em;
+}
+@media screen and (min-width: 768px) {
+  .order__title {
+    width: 365px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .order__title {
@@ -1017,7 +1026,7 @@ body {
     width: 270px;
   }
 }
-.customers__title {
+.customers-title {
   padding-bottom: 30px;
   font-size: 28px;
   text-align: center;
@@ -1026,17 +1035,20 @@ body {
 .customers {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   row-gap: 30px;
+  justify-content: space-between;
+  width: 100%;
   list-style: none;
+}
+.customers__item {
+  width: calc((100% - 30px) / 2);
 }
 .customers__icon {
   display: flex;
-  padding-top: 16px;
-  padding-bottom: 16px;
   justify-content: center;
+  padding: 16px;
   box-sizing: border-box;
-  width: 210px;
+  width: 100%;
   height: 92px;
   fill: var(--icon-fill);
   border: 1px solid var(--icon-fill);
@@ -1054,6 +1066,9 @@ body {
   .customers {
     display: flex;
     justify-content: space-between;
+  }
+  .customers__item {
+    width: 170px;
   }
   .customers__icon {
     width: 170px;
