--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -332,6 +332,10 @@
   @media screen and (max-width: 479px) {
           margin-bottom: 64px;
         }
+    @media screen and (max-width: 210px) {
+      margin-bottom: 0px;
+    }
+
 }
 
 
@@ -340,6 +344,10 @@
   display: flex;
   flex-wrap: wrap;
   list-style: none;
+
+  @media screen and (max-width: 320px) {
+      margin-top: 0px;
+    }
 
   &__item {
 
@@ -359,11 +367,11 @@
   &__link {
     font-weight: 500;
     font-size: 18px;
-      line-height: 1.22;
-      letter-spacing: 0.02em;
-      color: var(--brand-color);
-      position: relative;
-      text-decoration: none;
+    line-height: 1.22;
+    letter-spacing: 0.02em;
+    color: var(--brand-color);
+    position: relative;
+    text-decoration: none;
   }
 }
 
