--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -2,27 +2,34 @@
     display: flex;
     flex-direction: column;
     position: absolute;
+    z-index: 200;
     top: 50%;
     left: 50%;
+    width: 450px;
+    height: 609px;
+    padding: 40px;
+    background-color: var(--white-color);
     transform: translate(-50%, -50%) scale(1);
     transition: transform var(--transition-duration) var(--transition-function);
-    width:93%;
-    height: 73%;
-    background-color: var(--white-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
 
-    @media screen and(min-width: 768px) {
-            width: 450px;
-            height: 609px;
+    @media screen and(max-width: 479px) {
+            width: 100%;
+            height: 100%;
         }
+
+     @media screen and(min-width: 1200px) {
+             width: 528px;
+             height: 581px;
+         }
 
     &__btn--close {
         position: absolute;
         display: flex;
         justify-content: center;
         align-items: center;
-        z-index: 110;
+        z-index: 201;
         width: 30px;
         height: 30px;
         right: 8px;
@@ -31,6 +38,7 @@
         border-radius: 15px;
         background: #FFFFFF;
         border: 1px solid rgba(0, 0, 0, 0.1);
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.15);
 
         &:hover {
             cursor: pointer;
@@ -49,10 +57,6 @@
 
 @media screen and(min-width: 1200px) {
     .modal {
-            display: flex;
-         
-            position: absolute;
-          
             width: 528px;
             height: 581px;
     }
