--- a/sass/main.css
+++ b/sass/main.css
@@ -112,20 +112,28 @@ body {
   display: flex;
   flex-direction: column;
   position: absolute;
+  z-index: 200;
   top: 50%;
   left: 50%;
+  width: 450px;
+  height: 609px;
+  padding: 40px;
+  background-color: var(--white-color);
   transform: translate(-50%, -50%) scale(1);
   transition: transform var(--transition-duration) var(--transition-function);
-  width: 93%;
-  height: 73%;
-  background-color: var(--white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 }
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 479px) {
   .modal {
-    width: 450px;
-    height: 609px;
+    width: 100%;
+    height: 100%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
   }
 }
 .modal__btn--close {
@@ -133,7 +141,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 110;
+  z-index: 201;
   width: 30px;
   height: 30px;
   right: 8px;
@@ -142,6 +150,7 @@ body {
   border-radius: 15px;
   background: #FFFFFF;
   border: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.15);
 }
 .modal__btn--close:hover {
   cursor: pointer;
@@ -156,8 +165,6 @@ body {
 
 @media screen and (min-width: 1200px) {
   .modal {
-    display: flex;
-    position: absolute;
     width: 528px;
     height: 581px;
   }
@@ -167,27 +174,11 @@ body {
   flex-direction: column;
   position: relative;
   align-content: center;
-  width: 93%;
-  height: 73%;
+  width: 100%;
+  height: 100%;
   z-index: 109;
 }
-@media screen and (min-width: 768px) {
-  .form {
-    margin-left: 10px;
-    width: 390px;
-    height: 609px;
-  }
-  .form__title {
-    margin-left: 20px;
-  }
-  .form__btn--submit {
-    margin-left: 60px;
-  }
-}
 .form__title {
-  display: flex;
-  justify-content: center;
-  padding-top: 40px;
   padding-bottom: 12px;
   font-size: 20px;
   font-weight: 700;
@@ -201,17 +192,13 @@ body {
   margin-bottom: 10px;
 }
 .form__label {
-  display: flex;
-  margin-left: 40px;
   padding-bottom: 4px;
   font-size: 12px;
   letter-spacing: 1%;
   color: var(--main-gray-color);
 }
 .form__input {
-  display: flex;
   height: 40px;
-  margin-left: 40px;
   padding-left: 42px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -226,13 +213,12 @@ body {
   position: absolute;
   z-index: 111;
   top: 50%;
-  left: 52px;
+  left: 12px;
   fill: currentColor;
   transition: fill var(--transition-duration) var(--transition-function);
 }
 .form__comment {
   height: 120px;
-  margin-left: 40px;
   margin-bottom: 20px;
   padding: 12px 16px;
   color: var(--main-gray-color);
@@ -276,7 +262,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 60px;
   margin-bottom: 30px;
 }
 
@@ -288,10 +273,15 @@ body {
 .check + .check__label {
   position: relative;
   cursor: pointer;
-  padding-left: 34px;
+  padding-left: 23px;
   font-size: 12px;
   display: inline-block;
   color: var(--main-gray-color);
+}
+@media screen and (min-width: 1200px) {
+  .check + .check__label {
+    font-size: 14px;
+  }
 }
 
 .check + .check__label::before {
@@ -337,104 +327,6 @@ body {
   opacity: 0;
 }
 
-@media screen and (min-width: 1200px) {
-  .form {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    width: 528px;
-    height: 581px;
-    margin-left: 0px;
-  }
-  .form__title {
-    display: flex;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 40px;
-    padding-bottom: 12px;
-    font-size: 20px;
-    font-weight: 700;
-    line-height: 1.15;
-    text-align: center;
-  }
-  .form__content {
-    display: flex;
-    position: relative;
-    flex-direction: column;
-    margin-bottom: 10px;
-  }
-  .form__label {
-    display: flex;
-    margin-left: 40px;
-    padding-bottom: 4px;
-    font-size: 12px;
-    letter-spacing: 1%;
-    color: var(--main-gray-color);
-  }
-  .form__input {
-    width: 448px;
-    height: 40px;
-    margin-left: 40px;
-    padding-left: 42px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    box-sizing: border-box;
-    transition: border-color var(--transition-duration) var(--transition-function);
-  }
-  .form__input:focus {
-    border: 1px solid var(--brand-color);
-    outline: none;
-  }
-  .form__icon {
-    position: absolute;
-    top: 50%;
-    left: 52px;
-    fill: currentColor;
-    transition: fill var(--transition-duration) var(--transition-function);
-  }
-  .form__comment {
-    width: 448px;
-    height: 120px;
-    margin-left: 40px;
-    margin-bottom: 20px;
-    padding: 12px 16px;
-    color: var(--main-gray-color);
-    font-size: 12px;
-    resize: none;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    transition: border-color var(--transition-duration) var(--transition-function);
-  }
-  .form__comment:focus {
-    border: 1px solid var(--brand-color);
-    outline: none;
-  }
-  .form__link {
-    color: var(--brand-color);
-  }
-  .form__btn--submit {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 200px;
-    height: 50px;
-    margin-left: auto;
-    margin-right: auto;
-    color: var(--white-color);
-    font-weight: 700;
-    line-height: 1.875;
-    letter-spacing: 0.06em;
-    background-color: var(--brand-color);
-    border-style: hidden;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    cursor: pointer;
-  }
-
-  .checkbox__container {
-    margin-left: 10px;
-  }
-}
 .navigation {
   display: flex;
   width: 100%;
@@ -594,7 +486,7 @@ body {
   cursor: pointer;
   border: none;
   background-color: transparent;
-  z-index: 102;
+  z-index: 1;
 }
 @media screen and (min-width: 768px) {
   .mobile-menu__button {
@@ -626,7 +518,6 @@ body {
 
 .mobile-menu {
   position: fixed;
-  z-index: 100;
   background-color: var(--white-color);
   top: 0;
   left: 0;
