--- a/sass/components/_order.scss
+++ b/sass/components/_order.scss
@@ -1,63 +1,59 @@
 .order {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
     background-color: var(--dark-background-color);
-    max-width: 1600px;
-    max-height: 600px;
     margin-left: auto;
     margin-right: auto;
-    background-image: linear-gradient(to right,
-            rgba(47, 48, 58, 0.4),
-            rgba(47, 48, 58, 0.4)),
-        url("../images/order/order-1200.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-
-    @media (min-device-pixel-ratio: 2),
-    (-webkit-min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi),
-    (min-resolution: 2dppx) {
-        background-image: linear-gradient(to right,
+    background-image: linear-gradient(to right,
                 rgba(47, 48, 58, 0.4),
-                rgba(47, 48, 58, 0.4)), url("../images/order/order-1200@2x.jpg")
-    }
-
-    @media screen and (max-width: 768px) {
-        background-image: linear-gradient(to right,
-                rgba(47, 48, 58, 0.4),
-                rgba(47, 48, 58, 0.4)), url("../images/order/order-768.jpg");
-        height: 100%;
-        max-width: 100%;
-
-        @media (min-device-pixel-ratio: 2),
-        (-webkit-min-device-pixel-ratio: 2),
-        (min-resolution: 192dpi),
-        (min-resolution: 2dppx) {
+                rgba(47, 48, 58, 0.4)),
+            url("../images/order/order-480.jpg");
+    
+        @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
             background-image: linear-gradient(to right,
                     rgba(47, 48, 58, 0.4),
-                    rgba(47, 48, 58, 0.4)), url("../images/order/order-768@2x.jpg")
+                    rgba(47, 48, 58, 0.4)),
+                url(../images/order/order-480@2x.jpg);
         }
-    }
-
-    @media screen and (max-width: 480px) {
-        background-image: linear-gradient(to right,
-                rgba(47, 48, 58, 0.4),
-                rgba(47, 48, 58, 0.4)), url("../images/order/order-480.jpg");
-        max-height: 100%;
-        max-width: 100%;
-
-        @media (min-device-pixel-ratio: 2),
-        (-webkit-min-device-pixel-ratio: 2),
-        (min-resolution: 192dpi),
-        (min-resolution: 2dppx) {
+    
+        @media screen and (min-width: 768px) {
             background-image: linear-gradient(to right,
                     rgba(47, 48, 58, 0.4),
-                    rgba(47, 48, 58, 0.4)), url("../images/order/order-480@2x.jpg")
+                    rgba(47, 48, 58, 0.4)),
+                url("../images/order/order-768.jpg");
+    
+            @media screen and (min-device-pixel-ratio: 2),
+            screen and (min-resolution: 192dpi),
+            screen and (min-resolution: 2dppx) {
+                background-image: linear-gradient(to right,
+                        rgba(47, 48, 58, 0.4),
+                        rgba(47, 48, 58, 0.4)),
+                    url("../images/order/order-768@2x.jpg");
+            }
         }
-    }
-
+    
+        @media screen and (min-width: 1200px) {
+            max-width: 1600px;
+            max-height: 600px;
+            background-image: linear-gradient(to right,
+                    rgba(47, 48, 58, 0.4),
+                    rgba(47, 48, 58, 0.4)),
+                url("../images/order/order-1200.jpg");
+    
+            @media screen and (min-device-pixel-ratio: 2),
+            screen and (min-resolution: 192dpi),
+            screen and (min-resolution: 2dppx) {
+                background-image: linear-gradient(to right,
+                        rgba(47, 48, 58, 0.4),
+                        rgba(47, 48, 58, 0.4)),
+                    url("../images/order/order-1200@2x.jpg");
+            }
+        }
         &__container {
             display: flex;
             flex-direction: column;
@@ -66,7 +62,6 @@
         }
 
         &__title {
-        
             margin-left: auto;
             margin-right: auto;
             margin-top: 118px;
