--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -49,6 +49,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        z-index: 202;
         padding-left: 1px;
         padding-top: 2px;
     }
