--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -12,6 +12,7 @@
     }
 
     @media screen and (min-width: 1200px) {
-        width: 1200px;
+        width: 100%;
+        max-width: 1200px;
     }
 }
