--- a/sass/main.css
+++ b/sass/main.css
@@ -71,7 +71,8 @@ body {
 }
 @media screen and (min-width: 1200px) {
   .container {
-    width: 1200px;
+    width: 100%;
+    max-width: 1200px;
   }
 }
 
