--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,5 +1,4 @@
 .footer__page {
-
     color: var(--white-color);
     background-color: var(--background-dark-color);
 }
@@ -102,9 +101,11 @@
         list-style: none;
     }
 
-    &__item {
-        margin-right: 10px;
-    }
+        &__item {
+            &:not(:last-child) {
+                margin-right: 10px;
+            }
+        }
 
     &__link {
         display: flex;
@@ -193,6 +194,17 @@
 
 @media screen and(min-width: 1200px) {
 
+    .newsletter-form {
+            margin-left: 78px;
+            padding-top: 0px;
+    
+            &__title {
+                margin-left: 0px;
+    
+            }
+        }
+
+
     .footer-contact {
             display: flex;
             flex-direction: column;
@@ -208,20 +220,12 @@
     
             &__input {
                margin-right: 12px;
-                width: 348px;
-            }
-        }
-    .newsletter-form {
-            margin-left: 78px;
-            padding-top: 0px;
-     
-            &__title {
-                margin-left: 0px;
-              
+               width: 348px;
             }
         }
 
     .footer-socialmedia {
+        display: flex;
         margin-left: 70px;
         padding-top: 0px;
         
